# openMPSPH

./: CMakeLists.txt  README.md  main.cpp
include/: constant.hpp  io.hpp  solver.hpp
src/: io.cpp  solver.cpp
